# DrHPotter

./: .gitignore  Cargo.toml  README.md  drhpotter.example.toml
.github/workflows/: ci.yml  release.yml
docs/specs/: SPEC-001-ssh-honeypot-core.md  SPEC-002-configuration-system.md
src/: lib.rs  main.rs
src/capture/: logger.rs  mod.rs  storage.rs
src/config/: defaults.rs  file.rs  mod.rs  validation.rs
src/security/: mod.rs  rate_limit.rs
src/server/: handler.rs  mod.rs  session.rs
src/shell/: commands.rs  filesystem.rs  mod.rs
